--- a/dc-browser.html
+++ b/dc-browser.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/dc-browser.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script id="release-results" type="text/x-handlebars-template">
