--- a/dc-browser.html
+++ b/dc-browser.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/dc-browser.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script id="release-results" type="text/x-handlebars-template">
+
         <table class="table table-hover">
         <tbody>
         {{#results}}
@@ -73,53 +74,73 @@
         </table>
         </div>
     </script>
+    <script id="results-pagination" type="text/x-handlebars-template">
+    </script>
 </head>
-<body>
-    <a href="#dc-browser" role="button" class="btn" data-toggle="modal">Search</a>
-    <div id="dc-browser" class="modal hide fade modal-large" tabindex="-1" role="dialog" aria-labelledby="modal-label" aria-hidden="true">
-        <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="icon-remove"></i></button>
-            <h3 id="modal-label">Browse Releases</h3>
-        </div>
-        <div class="modal-body">
+<body>  
+        <div class="container">
             <div class="row">
-                <div class="span3">
-                    <fieldset id="dc-search-fields" class="form-horizontal">
-                        <input id="dc-title" class="span3" type="text" placeholder="Title">
-                        <input id="dc-artist" class="span3" type="text" placeholder="Artist">
-                        <input id="dc-catno" class="span3" type="text" placeholder="Cat No.">
-                        <input id="dc-format" class="span3" type="text" placeholder="format">
-                        <input id="dc-upc" class="span3" type="text" placeholder="UPC">
-                        <button id="dc-reset" class="btn"><i class="icon-reply"></i> reset</button>
-                        <button id="dc-browse" class="btn">Browse <i class="icon-double-angle-right"></i></button>
-                        <i id="dc-status" class="icon-spinner icon-spin icon-2x pull-left"></i>
-                    </fieldset>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <div class="panel panel-default">
+                    <div class="panel-heading">Search Releases</div>
+                    <form class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <!--<label for="dc-title" class="col-sm-2 control-label">Title</label>-->
+                            <div class="col-sm-12"><input id="dc-title" class="form-control" type="text" placeholder="Title"></div>
+                        </div>
+                        <div class="form-group">
+                            <!--<label for="dc-artist" class="col-sm-2 control-label">Artist</label>-->
+                            <div class="col-sm-12"><input id="dc-artist" class="form-control" type="text" placeholder="Artist"></div>
+                        </div>
+                        <div class="form-group">
+                            <!--<label for="dc-catno" class="col-sm-2 control-label">Catalog #</label>-->
+                            <div class="col-sm-12"><input id="dc-catno" class="form-control" type="text" placeholder="Cat No."></div>
+                        </div>
+                        <div class="form-group">
+                            <!--<label for="dc-format" class="col-sm-2 control-label">Format</label>-->
+                            <div class="col-sm-12"><input id="dc-format" class="form-control" type="text" placeholder="format"></div>
+                        </div>
+                        <div class="form-group">
+                            <!--<label for="dc-upc" class="col-sm-2 control-label">UPC</label>-->
+                            <div class="col-sm-12"><input id="dc-upc" class="form-control" type="text" placeholder="UPC"></div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-xs-12 col-sm-12">
+                                <button id="dc-reset" class="btn"><i class="icon-reply"></i> Clear</button>
+                                <button id="dc-browse" class="btn">Search<i class="icon-double-angle-right"></i></button>
+                                <i id="dc-status" class="icon-spinner icon-spin icon-2x pull-left"></i>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-                <div class="span6 ">
+            </div>
+                <div class="col-xs-12 col-sm-8 col-md-8">
+                    <div class="panel panel-default">
+                    <div class="panel-heading">Results</div>
                     <div id="dc-results" class="carousel slide">
                         <div class='carousel-inner'>
                             <div class="active item"></div>
                             <div class="item"></div>
                         </div>
                     </div>
-
+                </div>
                     <div id="dc-controls" class="carousel slide">
-                        <div class="carousel-inner">
-                            <div class='active item'>
+                            <div class="carousel-inner">
+                                <div class='active item'>
 
-                             </div>
-                            <div class='item'>
-                                <div id="dc-results-pagination" class="pagination pagination-small span6">
+                                 </div>
+                                <div class='item'>
+                                    <div id="dc-results-pagination" class="pagination pagination-small span6">
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
-        </div>
-    </div>
-</div>
-<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+
+<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/handlebars.js"></script>
 <script type="text/javascript" src="js/dc-browser.js"></script>
