--- a/dc-browser.html
+++ b/dc-browser.html
@@ -133,20 +133,20 @@
                         <i id="dc-status" class="icon-spinner icon-spin icon-2x pull-left"></i>
                     </div>
 
-                    <div id="dc-results" class="carousel slide">
-                        <div class='carousel-inner'>
-                            <div class="active item"></div>
-                            <div class="item"></div>
+                    <div id="dc-results" class="dyamo">
+                        <div class='dyamo-inner'>
+                            <div class="page active"></div>
+                            <div class="page"></div>
                         </div>
                     </div>
 
                     <div class="panel-footer">
-                        <div id="dc-controls" class="carousel slide">
-                            <div class="carousel-inner">
-                                <div class='active item'>
+                        <div id="dc-controls" class="dynamo">
+                            <div class="dynamo-inner">
+                                <div class='page active'>
 
                                  </div>
-                                <div class='item'>
+                                <div class='page'>
                                     <div id="dc-results-pagination">
                                     </div>
                                 </div>
@@ -156,12 +156,20 @@
                 </div>
             </div>
         </div>
+    </div>
 
 <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+<script type="text/javascript" src="js/dynamo.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/handlebars.js"></script>
 <script type="text/javascript" src="js/dc-browser.js"></script>
-<script type="text/javascript" src="js/tests.js"></script>
+
+
+<script>
+$(document).ready(function(){
+    DiscogsBrowser.init();
+})
+</script>
 
 </body>
 </html>
