--- a/dc-browser.html
+++ b/dc-browser.html
@@ -95,7 +95,7 @@
             <div class="col-xs-12 col-sm-4 col-md-4">
                 <div class="panel panel-default">
                 <div class="panel-heading">Search Releases</div>
-                <form class="form-horizontal" role="form">
+                <form id="browse-releases" class="form-horizontal" role="form">
                     <div class="form-group">
                         <!--<label for="dc-title" class="col-sm-2 control-label">Title</label>-->
                         <div class="col-sm-12"><input id="dc-title" class="form-control" type="text" placeholder="Title"></div>
@@ -119,7 +119,7 @@
                     <div class="form-group">
                         <div class="col-xs-12 col-sm-12">
                             
-                            <button id="dc-browse" type="button" class="btn btn-primary pull-right">Search<i class="icon-double-angle-right"></i></button>
+                            <input type="submit" id="dc-browse" value="browse" class="btn btn-primary pull-right" />
                             
                         </div>
                     </div>
@@ -158,6 +158,7 @@
         </div>
     </div>
 </div>
+<input type="file" accept="image/*" capture="camera">
 
 <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="js/dynamo.js"></script>
