added dynamic panels

--- a/dc-browser.html
+++ b/dc-browser.html
@@ -134,16 +134,16 @@
                     <i id="dc-status" class="icon-spinner icon-spin icon-2x pull-left"></i>
                 </div>
 
-                <div id="dc-results" class="carousel slide">
-                    <div class='carousel-inner'>
+                <div id="dc-results" class="dynamic-panel">
+                    <div class='dynamic-panel-inner'>
                         <div class="item active"></div>
                         <div class="item"></div>
                     </div>
                 </div>
 
                 <div class="panel-footer">
-                    <div id="dc-controls" class="carousel slide">
-                        <div class="carousel-inner">
+                    <div id="dc-controls" class="dynamic-panel">
+                        <div class="dynamic-panel-inner">
                             <div class='item active'>
 
                              </div>
@@ -161,7 +161,7 @@
 <input type="file" accept="image/*" capture="camera">
 
 <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-<script type="text/javascript" src="js/dynamo.js"></script>
+<script type="text/javascript" src="js/dynamic-panels.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/handlebars.js"></script>
 <script type="text/javascript" src="js/dc-browser.js"></script>
