Revised DC API to be more MVC

--- a/dc-browser.html
+++ b/dc-browser.html
@@ -127,7 +127,7 @@
             </div>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-8">
-            <div class="panel panel-default">
+            <div id="results-panel-view" class="panel panel-default">
                 <div class="panel-heading">
                     Results
                     <button id="dc-reset" class="btn btn-default btn-xs close pull-right"aria-hidden="true">&times;</button>
@@ -164,13 +164,17 @@
 <script type="text/javascript" src="js/dynamic-panels.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/handlebars.js"></script>
-<script type="text/javascript" src="js/dc-browser.js"></script>
+<!-- <script type="text/javascript" src="js/dc-browser.js"></script>
+ --><script type="text/javascript" src="js/base.js"></script>
+<script type="text/javascript" src="js/dc.search.js"></script>
+<script type="text/javascript" src="js/dc.tests.js"></script>
+<script type="text/javascript" src="js/dc.results.js"></script>
 
 
 <script>
-$(document).ready(function(){
-    DiscogsBrowser.init();
-})
+// $(document).ready(function(){
+//     DiscogsBrowser.init();
+// })
 </script>
 
 </body>
